test/scc/expr/semantic-errors/151.t
void test()
{
    union
    {
    	int a[2];
    	int b;
    } c = { 1, 2, 3 };
}